fix: ajustar z-index da classe resumo

--- a/carrinho/css/carrinho.css
+++ b/carrinho/css/carrinho.css
@@ -227,7 +227,7 @@ p {
   .resumo {
     width: 100%;
     max-width: none;
-    z-index: 10;
+    z-index: 1;
   }
 }
 
